     * Fixed HDR screen flicker (#928)
     * Fixed autopilot hangs related to gravpoint frames and small bodies (#935, #921)
     * Fixed crash where missile objects were destroyed while other objects
       were holding a reference to them (#922, #735)
     * Fixed hang when autopilot tried to start flying around a body from stopped (#934)

   * Script changes
     * Removed NameGen.PlanetName and replaced with NameGen.BodyName (#896)
     * Added EventQueue.DebugTimer to enable event function call timing for
       debugging purposes (#898)
     * Added Ship.shipType attribute to get ship type (#912)

   * Internal changes
     * New Texture class and subclasses to manage all kinds of GL texture
       creation and use (#892, #900, #901)
     * Simplified autotools build system by using pkg-config for all
       dependencies (#909, #353)
     * Additional debug checks to ensure that bodies are not removed or
       destroyed during destruction of another body (#922)

Alpha 18

   * New features
     * Jettison cargo while landed/docked (#872)
     * Multisampled antialiasing. Set the "AntiAliasingMode" config value or
       change your graphics driver settings (#848)

   * Minor changes and tweaks
     * Target square now appears on specific docking port of station when
       clearance is granted (#836, #835)
     * OpenGL info saved to opengl.txt on game start (#857)
     * Background stars are now denser along the galaxy strip as you'd expect (#844)
     * Probability of hyperspace arrival now displayed during hyperspace (#55, #879)
     * Be more accurate about the age of the universe (#891)

   * Fixes
     * Fix incorrect galaxy density on OSX (#867, #869)
     * Fix crash in system info view if opened the first time on an unexplored
       system (#783, #876)
     * Fix memory overrun in modelviewer that would break z-bias when mouse
       wheel is used (#880)
     * Fall back to no-AA HDR and then no-HDR based on GPU features (#855,
       #878, #877)