@@ -30,6 +30,8 @@ Alpha 19
      * Fixed crash where missile objects were destroyed while other objects
        were holding a reference to them (#922, #735)
      * Fixed hang when autopilot tried to start flying around a body from stopped (#934)
+     * Make sure the ship is above the body's max feature height before
+       attempting a flyaround
 
    * Script changes
      * Removed NameGen.PlanetName and replaced with NameGen.BodyName (#896)
